--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config api.proxy.json",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0-next.0",
-    "@angular/common": "^18.0.0-next.0",
-    "@angular/compiler": "^18.0.0-next.0",
-    "@angular/core": "^18.0.0-next.0",
-    "@angular/forms": "^18.0.0-next.0",
-    "@angular/platform-browser": "^18.0.0-next.0",
-    "@angular/platform-browser-dynamic": "^18.0.0-next.0",
-    "@angular/router": "^18.0.0-next.0",
+    "@angular/animations": "^18.0.0-next.5",
+    "@angular/common": "^18.0.0-next.5",
+    "@angular/compiler": "^18.0.0-next.5",
+    "@angular/core": "^18.0.0-next.5",
+    "@angular/forms": "^18.0.0-next.5",
+    "@angular/material": "^18.0.0-next.5",
+    "@angular/material-experimental": "^18.0.0-next.5",
+    "@angular/platform-browser": "^18.0.0-next.5",
+    "@angular/platform-browser-dynamic": "^18.0.0-next.5",
+    "@angular/router": "^18.0.0-next.5",
+    "@likdan/form-builder-material": "^0.0.8",
+    "@likdan/state-mapper": "^0.0.1",
+    "@likdan/studyum-core": "^0.0.3",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
