--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,19 +1,23 @@
 events {}
 
 http {
-    upstream service_auth {
+    upstream api_auth {
         server api-auth:0100;
     }
 
-    upstream service_studyplaces {
+    upstream api_sso {
+        server api-sso:0600;
+    }
+
+    upstream api_studyplaces {
         server api-studyplaces:0200;
     }
 
-    upstream service_types_registry {
+    upstream api_types_registry {
         server api-types_registry:0300;
     }
 
-    upstream service_scheduler {
+    upstream api_schedule {
         server api-schedule:0400;
     }
 
@@ -31,22 +35,27 @@ http {
 
       location /api/users {
         include /etc/nginx/nginx.proxy.conf;
-        proxy_pass http://service_auth/api;
+        proxy_pass http://api_auth/api;
       }
 
       location /api/studyplaces {
         include /etc/nginx/nginx.proxy.conf;
-        proxy_pass http://service_studyplaces/api;
+        proxy_pass http://api_studyplaces/api;
       }
 
       location /api/registry {
         include /etc/nginx/nginx.proxy.conf;
-        proxy_pass http://service_types_registry/api;
+        proxy_pass http://api_types_registry/api;
       }
 
       location /api/schedule {
         include /etc/nginx/nginx.proxy.conf;
-        proxy_pass http://service_scheduler/api;
+        proxy_pass http://api_schedule/api;
+      }
+
+      location /api/sso {
+        include /etc/nginx/nginx.proxy.conf;
+        proxy_pass http://api_sso/api;
       }
     }
 }
