--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "^18.0.0-next.5",
     "@angular/platform-browser-dynamic": "^18.0.0-next.5",
     "@angular/router": "^18.0.0-next.5",
-    "@likdan/form-builder-material": "^0.0.8",
+    "@likdan/form-builder-material": "0.0.11",
+    "@likdan/form-builder-core": "0.0.9",
     "@likdan/state-mapper": "^0.0.1",
-    "@likdan/studyum-core": "^0.0.5",
+    "@likdan/studyum-core": "../core/dist",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
