--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@likdan/form-builder-material": "0.0.11",
     "@likdan/form-builder-core": "0.0.9",
     "@likdan/state-mapper": "^0.0.1",
-    "@likdan/studyum-core": "../core/dist",
+    "@likdan/studyum-core": "0.0.12",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
